                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 23-02-2005 changed: Get available subtitle fonts and sizes from alternate mplayer path if alternate mplayer is enabled
  - 23-02-2005 updated: Polish language file (Thnx to napek)
  - 23-02-2005 updated: Norwegian language file (Thnx to vnm)
  - 23-02-2005 updated: Italian language file (Thnx to kotix)
  - 23-02-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 23-02-2005 updated: Finnish language file (Thnx to jutski)
  - 23-02-2005 fixed: Switching from Fullscreen Video -> GUI now looks more professional (blank screen rather than stalled/mangled video)
  - 23-02-2005 added: [ 1149558 ] Printing XBE Title To LCD On Launch.  Thanks sniperkilla!
  - 22-02-2005 fixed: Crash when Kai is re-entered after a skin/font/etc. change.
  - 21-02-2005 fixed: Yet another weather localization fix.  Thanks KoTiX!
  - 21-02-2005 fixed: Updated system/players/mplayer/mplayer.dll to current CVS (includes flac fix + crash fix)
  - 21-02-2005 fixed: Music Database Cleanup would remove all songs from database.
  - 21-02-2005 fixed: iTunes sharing caused crash if no connection (or iTunes sharing) was available.
  - 21-02-2005 added: More weather localization thanks to Kotix.  Busy is also localized (string 503).
  - 21-02-2005 added: Writing files returns false if unable to do so.  Means that moving files will only
                      allow the source file to be deleted if the copy was successful - thanks to modplug.
  - 21-02-2005 fixed: Highlight sometimes didn't go away in filemanager when doing popup menu stuff.
  - 21-02-2005 fixed: Destination files weren't deleted if copy/move was cancelled.